<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/canAuthenticate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/can_authenticate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authenticate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authenticate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authenticateEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authenticate_encrypt"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/authenticateDecrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authenticate_decrypt" />

</LinearLayout>