<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/authenticatorStrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authenticator_strong" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/authenticatorWeak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authenticator_weak" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/authenticatorDeviceCredential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authenticator_device_credential" />

</LinearLayout>